--- a/_project_starter_/index.html
+++ b/_project_starter_/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>My Project</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Project Starter</h1>
     <script src="script.js"></script>
-  </body>
+    <script src="iife001.js"></script>
+    <script src="iife002.js"></script>
+    <!-- <script src="iife003.js"></script> -->
+    <!-- <script src="iife004.js"></script> -->
+    <!-- <script src="iife005.js"></script> -->
+    <script src="iife006.js"></script>
+</body>
+
 </html>
